# deep-research

./: README.md  main.ipynb  main.py  pyproject.toml
deep_research/: configuration.py  graph.py  nodes.py  prompts.py  state.py  struct.py  utils.py
temp/: notebook.ipynb
