[project]
name = "deep-research"
version = "0.1.0"
description = ""
authors = [
    {name = "Gaurav Sharma",email = "psykickai@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"

[tool.poetry]
packages = [
    { include = "deep_research" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
langchain = ">=0.3.22,<0.4.0"
langchain-openai = ">=0.3.11,<0.4.0"
langgraph = ">=0.3.24,<0.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"